--- a/style.css
+++ b/style.css
@@ -3,9 +3,11 @@
     margin: 0;
     padding: 0;
 }
-:root{
+
+:root {
     --text-color: white;
 }
+
 /* hides scrollbar */
 body::-webkit-scrollbar {
     display: none;
@@ -30,34 +32,44 @@ body::-webkit-scrollbar {
 
 
 /* nav bar */
-nav {
+.navbar {
     background: rgb(40, 39, 59);
-    background: linear-gradient(108deg, rgba(40, 39, 59, 1) 6%, rgba(48, 91, 137, 1) 57%);
-    box-shadow: 0 5px 10px 5px rgba(255, 255, 255, 0.01);
+    background: linear-gradient(108deg, rgba(40, 39, 59, 1) 6%, #305b89 57%);
+    box-shadow: 0 5px 10px 5px #ffffff03;
     padding: 20px;
     position: fixed;
     width: 100%;
     transition: .3s ease-in-out;
+    display: flex;
+    justify-content: center;
 }
 
-nav ul {
+.navbar .nav-items {
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 0;
-
 }
 
-ul li {
+
+.nav-items li {
     list-style-type: none;
     padding: 0 22px;
     font-size: 1.2rem;
 }
 
-ul li a {
+.nav-items li a {
     text-decoration: none !important;
     color: var(--text-color);
     transition: color .2s ease-in-out;
+}
+
+/* toggle button for screen less than 700px */
+.toggler {
+    display: none;
+    position: fixed;
+    right: 20px;
+    top: 10px;
 }
 
 /* intro section */
@@ -68,10 +80,11 @@ ul li a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 .name h1 {
-    font-size: 10rem;
+    font-size: 10vw;
     font-weight: 100;
     color: var(--text-color);
 }
@@ -97,9 +110,54 @@ ul li a {
 
 .about p {
     width: 400px;
-    font-size: large;
     text-align: justify;
-    color: rgb(182, 182, 182);
+    color: #b6b6b6;
+}
+
+.dos-emp {
+    font-size: 20px;
+    color: white;
+    text-decoration: underline;
+}
+
+.skills {
+    min-width: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    flex-wrap: wrap;
+    border-left: 5px solid #ffffff1f;
+}
+
+.skills .fa-brands {
+    margin: 8px 0;
+    transition: transform .3s ease-in-out;
+}
+
+.skills .fa-brands:hover {
+    transform: translateX(20px);
+}
+
+.skills .fa-html5 {
+    color: #D84924;
+}
+
+.skills .fa-css3 {
+    color: #379AD6;
+}
+
+.skills .fa-bootstrap {
+    color: #7311EC;
+}
+
+.skills .fa-js {
+    color: #F7E018;
+}
+
+.skills .fa-react {
+    color: #00CDF2;
 }
 
 /* projects section */
@@ -123,6 +181,8 @@ ul li a {
 
 .main-projects-links {
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
     gap: 10px;
     margin-top: 5rem;
@@ -195,8 +255,15 @@ footer {
     transform: scale(1.2);
 }
 
-.icon-color:hover {
-    color: #315A81;
+.fa-facebook:hover,
+.fa-linkedin:hover {
+    color: #0B83E5;
+    transition: color .2s ease-in-out;
+}
+
+.fa-github:hover,
+.fa-codepen:hover {
+    color: #000000;
     transition: color .2s ease-in-out;
 }
 
@@ -220,5 +287,82 @@ footer {
 @keyframes beat {
     to {
         transform: scale(1.3);
+    }
+}
+
+
+
+
+
+@media screen and (max-width: 700px) {
+    .navbar {
+        width: 100%;
+        height: 100vh;
+        left: -100%;
+    }
+
+    .show-navbar {
+        left: 0;
+    }
+
+    .navbar .nav-items {
+        flex-direction: column;
+        height: 100%;
+        justify-content: space-around;
+    }
+
+    .toggler {
+        display: block;
+        z-index: 100;
+    }
+
+    h1,
+    h2 {
+        font-size: 10vw !important;
+    }
+
+    .about p {
+        width: 99vw;
+        text-align: center;
+    }
+
+    .about {
+        flex-direction: column;
+        text-align: center;
+        overflow-y: hidden;
+        margin-bottom: 50px;
+        width: auto;
+    }
+
+    .skills {
+        flex-direction: row;
+    }
+
+    .skills.fa-brands {
+        font-size: 10vw;
+    }
+
+    .skills .fa-brands:hover {
+        transform: translateY(-20px);
+    }
+
+    .projects {
+        text-align: center;
+        height: auto;
+        margin-bottom: 50px;
+    }
+
+    .main-projects-links img {
+        width: 80%;
+
+    }
+
+    footer {
+        height: 30%;
+    }
+
+    .back-to-top {
+        bottom: 10px;
+        right: 10px;
     }
 }
